--- a/updraft-sdk/src/main/res/layout/fragment_updraft_feedback.xml
+++ b/updraft-sdk/src/main/res/layout/fragment_updraft_feedback.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,7 +18,7 @@
             android:paddingStart="@dimen/updraft_feedback_screen_padding_start"
             android:paddingTop="@dimen/updraft_feedback_screen_padding_top">
 
-            <android.support.v7.widget.AppCompatSpinner
+            <androidx.appcompat.widget.AppCompatSpinner
                 android:id="@+id/updraft_feedback_type_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -125,4 +125,4 @@
                 android:text="@string/updraft_alert_button_cancel" />
         </FrameLayout>
     </FrameLayout>
-</android.support.v4.widget.NestedScrollView>
+</androidx.core.widget.NestedScrollView>
