--- a/updraft-sdk/src/main/res/layout/fragment_updraft_feedback.xml
+++ b/updraft-sdk/src/main/res/layout/fragment_updraft_feedback.xml
@@ -13,10 +13,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingBottom="@dimen/updraft_feedback_screen_padding_bottom"
-            android:paddingEnd="@dimen/updraft_feedback_screen_padding_end"
             android:paddingStart="@dimen/updraft_feedback_screen_padding_start"
-            android:paddingTop="@dimen/updraft_feedback_screen_padding_top">
+            android:paddingTop="@dimen/updraft_feedback_screen_padding_top"
+            android:paddingEnd="@dimen/updraft_feedback_screen_padding_end"
+            android:paddingBottom="@dimen/updraft_feedback_screen_padding_bottom">
 
             <androidx.appcompat.widget.AppCompatSpinner
                 android:id="@+id/updraft_feedback_type_spinner"
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/updraft_feedback_description_input_margin_top"
                 android:gravity="start|top"
-                android:hint="@string/feedback.description.placeholder"
+                android:hint="@string/updraft.feedback.description.placeholder"
                 android:inputType="textMultiLine"
                 android:lines="6"
                 android:minLines="6" />
@@ -42,32 +42,38 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/updraft_feedback_email_input_margin_top"
-                android:hint="@string/feedback.email.placeholder"
+                android:hint="@string/updraft.feedback.email.placeholder"
                 android:inputType="textEmailAddress" />
 
-            <FrameLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/updraft_feedback_buttons_margin_top">
+                android:layout_marginTop="@dimen/updraft_feedback_buttons_margin_top"
+                android:layout_gravity="center_vertical"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/updraft_feedback_previous_button"
                     style="@style/UpdraftBackAndPreviousButton"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start|bottom"
-                    android:text="@string/button.previous" />
+                    android:gravity="center_vertical"
+                    android:layout_height="match_parent"
+                    android:text="@string/updraft.button.previous" />
 
-                <Button
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="1" />
+
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/updraft_feedback_send_button"
                     style="@style/UpdraftButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="end|center_vertical"
-                    android:text="@string/button.sendFeedback"
+                    android:text="@string/updraft.button.sendFeedback"
                     android:textAllCaps="false" />
 
-            </FrameLayout>
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -77,10 +83,10 @@
             android:layout_height="match_parent"
             android:background="@color/charcoal_grey"
             android:orientation="vertical"
-            android:paddingBottom="@dimen/updraft_feedback_progress_container_padding_bottom"
-            android:paddingEnd="@dimen/updraft_feedback_progress_container_padding_end"
             android:paddingStart="@dimen/updraft_feedback_progress_container_padding_start"
             android:paddingTop="@dimen/updraft_feedback_progress_container_padding_top"
+            android:paddingEnd="@dimen/updraft_feedback_progress_container_padding_end"
+            android:paddingBottom="@dimen/updraft_feedback_progress_container_padding_bottom"
             android:visibility="gone">
 
             <LinearLayout
@@ -96,7 +102,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="@dimen/updraft_feedback_progress_text_margin_bottom"
-                    android:text="@string/feedback.send.inProgress" />
+                    android:text="@string/updraft.feedback.send.inProgress" />
 
                 <ProgressBar
                     android:id="@+id/updraft_feedback_progress_bar"
@@ -122,7 +128,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|start"
-                android:text="@string/button.cancel" />
+                android:text="@string/updraft.button.cancel" />
         </FrameLayout>
     </FrameLayout>
 </androidx.core.widget.NestedScrollView>
